--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "portofolio-3d-backend",
+  "name": "portfolio-db",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "start": "node dist/index.js",
+    "setup": "npm i && npm run build && pm2 start --name portfolio-db npm -- start --update-env --time && pm2 save",
+    "deploy": "git pull --no-rebase && npm run build && pm2 restart portfolio-db --update-env --time && pm2 save"
   },
   "nodemonConfig": {
     "watch": [
