--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,14 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "target": "ES2020",
+    "sourceMap": true,
+    "outDir": "dist",
     "incremental": true,
     "plugins": [
       {
@@ -22,5 +25,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["dist"]
 }
+
